--- a/Forum/Pages/CreateThread.razor
+++ b/Forum/Pages/CreateThread.razor
@@ -148,6 +148,7 @@
 		public string Title { get; set; }
 
 		[Required]
+		[MaxLength(8192, ErrorMessage = "Content must not be longer than 8192 characters.")]
 		public string Content { get; set; }
 
 		public string Tags { get; set; }
