--- a/Forum/Pages/CreateThread.razor
+++ b/Forum/Pages/CreateThread.razor
@@ -38,8 +38,8 @@
 			</div>
 			<InputText class="form-control" type="text" placeholder="Add Tags" @bind-Value="_createThreadModel.Tags"/>
 			<div class="row">
-				<button type="button"  @onclick='() => NavMan.NavigateTo("/")' class="accent-blue btn-bottom-left">Go Back</button>
-				<button type="submit" class="accent-green btn-bottom-right">Create Thread</button>
+				<button type="button"  @onclick='() => NavMan.NavigateTo("/")' class="btn-col-dark accent-light btn-left">Go Back</button>
+				<button type="submit" class="btn-col-dark accent-dark btn-right">Create Thread</button>
 			</div>
 		</div>
 	</EditForm>
