--- a/Forum/Pages/Register.razor
+++ b/Forum/Pages/Register.razor
@@ -37,8 +37,8 @@
 				<ValidationMessage For="() => _registerModel.RepeatPassword"/>
 			</div>
 			<div class="row">
-				<button type="button" class="accent-blue btn-bottom-left btn-grow-large" @onclick='() => NavMan.NavigateTo("/login")'>Already have an account?</button>
-				<button type="submit" class="accent-green btn-bottom-right">Register</button>
+				<button type="button" class="btn-col-dark accent-light btn-left btn-grow-large" @onclick='() => NavMan.NavigateTo("/login")'>Already have an account?</button>
+				<button type="submit" class="btn-col-dark accent-dark btn-right">Register</button>
 			</div>
 		</div>
 	</EditForm>
